[package]
name = "pdfshrink"
version = "0.1.2"
authors = ["Federico Stra <stra.federico@gmail.com>"]
description = "Shrink PDF files using Ghostscript"
license = "MIT"
edition = "2018"
repository = "https://github.com/FedericoStra/pdfshrink"
keywords = ["PDF", "Ghostscript", "compression"]
categories = ["command-line-utilities", "compression", "encoding", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
tempdir = "0.3"
