[package]
name = "pdfshrink"
version = "0.1.8"
authors = ["Federico Stra <stra.federico@gmail.com>"]
description = "Shrink PDF files using Ghostscript"
license = "MIT"
edition = "2018"
repository = "https://github.com/FedericoStra/pdfshrink"
keywords = ["PDF", "Ghostscript", "compression"]
categories = ["command-line-utilities", "compression", "encoding", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3", features = ["color"] }
# tempdir = "0.3" # needed to implement --inplace
log = { version = "0.4.14", optional = true }

# optional dependencies to build the binary
env_logger = { version = "0.8.3", optional = true }
shell-escape = { version = "0.1.5", optional = true }

[features]
default = ["build-binary"]
build-binary = ["logging", "env_logger", "shell-escape"]
logging = ["log"] # required to compile the library with the "log" dependency

[[bin]]
name = "pdfshrink"
required-features = ["build-binary"]

[package.metadata.release]
no-dev-version = true
